# fastAPI-task-scheduler

./: .env.template  Dockerfile  README.md  REAME.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0df5ce06bd8f_shedulers.py  14453939fdef_unique_donetasks_task_id_and_date.py  2d89ddabc35c_categories.py  86b0fed4843e_donetasks.py  a99f017e54cf_categories_unique.py  b9a6356d83fc_tasks.py  c9f370be355a_tasks.py  cbb0dd8c5340_shedulers.py  d9dab3d95863_model_users.py
app/: exceptions.py  main.py  settings.py
app/base/: exceptions.py  schemas.py
app/categories/: __init__.py  models.py  routers.py  schemas.py  services.py
app/database/: exceptions.py  services.py  settings.py
app/done_tasks/: __init__.py  models.py  routers.py  schemas.py  services.py
app/mail/: __init__.py  routers.py  services.py  templates.py
app/reports/: __init__.py  routers.py  schemas.py  services.py  utils.py
app/schedulers/: __init__.py  models.py  routers.py  schemas.py  services.py
app/tasks/: __init__.py  models.py  routers.py  schemas.py  services.py
app/tasks_celery/: users.py
app/users/: __init__.py  models.py  routers.py  schemas.py  services.py  utils.py
app/utils/: __init__.py  utils.py
